@@ -52,7 +52,7 @@ extern "C" {
    structure and try to get by with this definition. Sometimes it works,
    sometimes it doesn't. Not sure if there really is a good solution for
    this problem... */
-#ifndef DEVICES_TIMER_H
+#if !defined(__TIMEVAL_ALREADY_DEFINED) && !defined(DEVICES_TIMER_H)
 
 /****************************************************************************/
 
@@ -98,7 +98,7 @@ struct timeval
 
 /****************************************************************************/
 
-#endif /* DEVICES_TIMER_H */
+#endif /* __TIMEVAL_ALREADY_DEFINED && DEVICES_TIMER_H */
 
 /****************************************************************************/
 
